--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         Segments <input type="range" min="9" max="30" value="0" class="slider" id="segSlide">
         </p> 
 
-        <script src="../lib/webgl-utils.js"></script>
-        <script src="../lib/webgl-debug.js"></script>
-        <script src="../lib/cuon-utils.js"></script>
+        <script src="lib/webgl-utils.js"></script>
+        <script src="lib/webgl-debug.js"></script>
+        <script src="lib/cuon-utils.js"></script>
         <script src="Points.js"></script>
         <script src="Triangle.js"></script>
         <script src="Circle.js"></script>
